tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_int/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_int/input.essence:3:16:
  |
3 | such that s != x
  |                ^
Type error:
	Expected: set of int
	Got: int

